beat the rhythm and notes

--- a/Manual/Beatblock/HTML/Beatblock.html
+++ b/Manual/Beatblock/HTML/Beatblock.html
@@ -36,10 +36,12 @@
 
                 <p>This module initially contains a big rectangular canvas with an image, a text box, and a Play button.</p>
                 <p>The text box will contain the information about a certain custom chart in Beatblock. This information includes the name of the song, the song’s artist, and the chart’s charter.</p>
-                <p>For the first out of this module’s two stages, your goal is to submit the correct background image for the described chart (which can be found in the Chart Table). To do so, press the canvas to cycle through the 8 possible background images and press the Play button once the correct one is selected.</p>
+
+                <h2>Stage 1</h2>
+                <p>Your goal is to submit the correct background image for the described chart (which can be found in the Chart Table). To do so, press the canvas to cycle through the 8 possible background images and press the Play button once the correct one is selected.</p>
                 <p>If the correct background image is submitted, the module will progress to its second stage. Otherwise, a strike will be given, and the module will fully reset (a new chart for the textbox and a new set of possible background images will be picked).</p>
             
-                <h2>Chart Table</h2>
+                <h3>Chart Table</h3>
                 <div class="hstack">
                     <table>
                         <tr><th>La Di Da (Nightcore & Cut Ver.)</th></tr>
@@ -1219,6 +1221,18 @@
                 </div>
             </div>
             <div class="page-footer relative-footer">14</div>
+        </div>
+
+        <div class="page page-bg-04">
+            <div class="page-header">
+                <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
+                <span class="page-header-section-title">Beatblock</span>
+            </div>
+            <div class="page-content">
+                <h2>Stage 2</h2>
+                <p>The module will transform to show the view of the chart you selected.</p>
+            </div>
+            <div class="page-footer relative-footer">15</div>
         </div>
     </div>
 </body>
